<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCashbook</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_date">2004/08/24</string>
    <string name="string_total">0</string>
    <string name="string_of_add_cash_button">입력</string>
    <string name="default_sum_value">0</string>
    <string name="string_item_tag">항목</string>
    <string name="string_value_price">금액</string>
    <string name="button_close">닫기</string>
    <string name="button_add">입력</string>
    <string name="alert_string_added_cashlog_item">Added your %d items</string>
    <string name="alert_string_empty_tag_text">You should input your subject</string>
    <string name="alert_string_added_your_item">Your item is added</string>
    <string name="alert_string_empty_age">Your item is added</string>
    <string name="string_yesterday">yesterday</string>
    <string name="string_today">today</string>
    <string name="string_tomorrow">tomorrow</string>
    <color name="color_sum_of_cash">#0000FF</color>
    <string name="button_close_app">닫기</string>
    <color name="color_sum_of_month">#9370DB</color>
    <string name="default_sum_of_month_value">9월 10,000</string>
    <string name="string_comment">메모</string>

</resources>
